[Fix] findDayFeed